--- a/iashell/iachkin/CheckInMultiForm.resx
+++ b/iashell/iachkin/CheckInMultiForm.resx
@@ -117,11 +117,60 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageListStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageListStatus.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAG
+        CQAAAk1TRnQBSQFMAgEBAwEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABP8BCAFXAVUCVAFV
+        AVcBCAT/MAAC/wH2AZgB+gGWAggBVAGYAZ0BVQGYA/8wAAL/AlUCVAH6A1QB+gEIAlUC/zAAAf8BVwFV
+        AVQB+gFVAlQB+gFVA1QBVQFXAf8FAAZGCgAGRhUAAf8FVAH6AVUCVAH6AVUBVAEIAVQB/wYABEYMAARG
+        FgABVgGdAfoBVQH6A1QB+gNUAfoBVAGYAVcCAAFGBAACRgQAAUYEAAFGBAACRgQAAUYSAAFVAQgDVAFV
+        AfoCVAFVAfoBVQJUAZgBVQIAAkYIAAJGBAACRggAAkYSAAH6AQgBVAFVAfoCVAFVAfoDVAH6AVQB+gFV
+        AgADRgYAA0YEAANGBgADRhIAAlQB+gNUAfoCVAFVAfoCVAFVAQgBVQIABEYFAANGBAAERgUAA0YSAAFV
+        AQgCVAH6AVUBVAFVAfoCVAFVAfoBVAEIAVUCAANGBwACRgQAA0YHAAJGEgABVgGdAfoBVQJUAfoDVAH6
+        A1QBnQFWAgACRgQAAUYEAAFGBAACRgQAAUYEAAFGEgAB9gNUAfoDVAH6AVUDVAH6ATMB9gIAAUYEAANG
+        CAABRgQAA0YWAAH/AVcBVQJUAVUB+gFVAlQB+gFVAVQBVQGYAf8GAAVGCwAFRhUAAv8BVgFVAfoDVAH6
+        AlQB+gJVAv8wAAP/AVcBVAGdAQgB+gFUAZgBnQFUAVcD/zAABP8B9gFXAVUBVAJVAVYF/zAAAUIBTQE+
+        BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/+BAAs=
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        vwAADr8BOAVTJAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
@@ -131,7 +180,7 @@
   <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        vwAADr8BOAVTJAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
