--- a/iashell/iaprop/MainPropertiesForm.resx
+++ b/iashell/iaprop/MainPropertiesForm.resx
@@ -117,6 +117,63 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageListStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageListStatus.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADm
+        CgAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABP8BCAFXAVUCVAFV
+        AVcBCAj/AfYBmQFYAfsCWAGZAfYI/wH2ARYBTAEXASsBjgGTAfYE/xAAAv8B9gGYAfoBlgIIAVQBmAGd
+        AVUBmAb/AZkB+wNYAfsDWAGZBv8BkwElAkwB+QFGARcBTAElAZMD/xAAAv8CVQJUAfoDVAH6AQgCVQT/
+        A1gB+wE3AfsBNwH7AVgB+wJYBP8CTAFGBPkBJQH5AUYCTAL/EAAB/wFXAVUBVAH6AVUCVAH6AVUDVAFV
+        AVcC/wGZAVgBNwT7AVgC+wE3AfsBWAGZAv8BkwFMA/kBQAElAfkBJQP5AUwBkwH/EAAB/wVUAfoBVQJU
+        AfoBVQFUAQgBVAH/AfYB+wFYAfsBNwH7ATcC+wE3AvsBWAH7AVgC9gElAUYB+QElAfkBJQT5ASUB+QFG
+        ASUB9hAAAVYBnQH6AVUB+gNUAfoDVAH6AVQBmAFXAZkBWAE3AvsBWAL7AVgC+wE3AvsBWAGZAZMBTAX5
+        ASUB+QFAAvkBQAH5AUwBkxAAAVUBCANUAVUB+gJUAVUB+gFVAlQBmAFVAlgC+wE3AvsBNwH7ATcC+wE3
+        AfsCWAFMARcB+QElBfkBJQH5ASUC+QFMAVIQAAH6AQgBVAFVAfoCVAFVAfoDVAH6AVQB+gFVAVgC+wFY
+        AfsBNwH7AVgC+wE3AfsBWAL7AVgCFwT5AUABJQb5ASUBFxAAAlQB+gNUAfoCVAFVAfoCVAFVAQgBVQH7
+        AVgD+wE3AvsBNwH7AVgD+wFYAfsBJQL5AUABJQH5ASUC+QElAvkBJQH5AUYBJRAAAVUBCAJUAfoBVQFU
+        AVUB+gJUAVUB+gFUAQgBVQJYAvsBNwL7AVgC+wE3AfsBNwH7AlgBUgEXASUG+QFABPkBFwFSEAABVgGd
+        AfoBVQJUAfoDVAH6A1QBnQFWAZkBWAL7AVgB+wE3AfsBNwX7AVgBmQEWAUwC+QElA/kBJQL5AUYC+QFM
+        ARYQAAH2A1QB+gNUAfoBVQNUAfoBMwL2AfsBWAP7ATcC+wE3AfsBWAH7AVgB+wL2ASUBRgP5AUYC+QEl
+        A/kBRgElAfYQAAH/AVcBVQJUAVUB+gFVAlQB+gFVAVQBVQGYAv8BmQFYBfsBWAT7AVgBmQL/AZMBTAT5
+        ASUC+QElAvkBTAGTAf8QAAL/AVYBVQH6A1QB+gJUAfoCVQT/A1gH+wJYBP8BUgFMAUYH+QJMAv8QAAP/
+        AVcBVAGdAQgB+gFUAZgBnQFUAVcG/wGZAfsCWAH7A1gB+wGZBv8BkwElARcBTAH5AUYBFwFMASUBkwP/
+        EAAE/wH2AVcBVQFUAlUBVgn/AfYBmQJYAfsBWAGZAfYI/wH2AZMBTAElARcBUgEWAfYE/xAAAUIBTQE+
+        BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/+BAAs=
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
