--- a/iashell/iaprop/LogForm.resx
+++ b/iashell/iaprop/LogForm.resx
@@ -117,11 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageListEvent.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageListEvent.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADY
+        DQAAAk1TRnQBSQFMAgEBBgEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABP8BCAFXAVUCVAFV
+        AVcBCAT/MAAC/wH2AZgB+gGWAggBVAGYAZ0BVQGYA/8wAAL/AlUCVAH6A1QB+gEIAlUC/zAAAf8BVwFV
+        AVQB+gFVAlQB+gFVA1QBVQFXAf8CAAxGIgAB/wVUAfoBVQJUAfoBVQFUAQgBVAH/AgAMRiIAAVYBnQH6
+        AVUB+gNUAfoDVAH6AVQBmAFXAgAMRiIAAVUBCANUAVUB+gJUAVUB+gFVAlQBmAFVAgAMRiIAAfoBCAFU
+        AVUB+gJUAVUB+gNUAfoBVAH6AVUCAAxGIgACVAH6A1QB+gJUAVUB+gJUAVUBCAFVAgAMRiIAAVUBCAJU
+        AfoBVQFUAVUB+gJUAVUB+gFUAQgBVQIADEYiAAFWAZ0B+gFVAlQB+gNUAfoDVAGdAVYCAAxGIgAB9gNU
+        AfoDVAH6AVUDVAH6ATMB9gIADEYiAAH/AVcBVQJUAVUB+gFVAlQB+gFVAVQBVQGYAf8CAAxGIgAC/wFW
+        AVUB+gNUAfoCVAH6AlUC/zAAA/8BVwFUAZ0BCAH6AVQBmAGdAVQBVwP/MAAE/wH2AVcBVQFUAlUBVgX/
+        MAAE/wEIAVcBVQJUAVUBVwEICP8BCAFXAVUCVAFVAVcBCAj/AfYBmQFYAfsCWAGZAfYI/wEIAVcBVQJU
+        AVUBVwEIBv8B9gGYAfoBlgIIAVQBmAGdAVUBmAX/AfYBmAH6AZYCCAFUAZgBnQFVAZgG/wGZAfsDWAH7
+        A1gBmQX/AfYBmAH6AZYCCAFUAZgBnQFVAZgF/wJVAlQB+gNUAfoBCAJVBP8CVQJUAfoDVAH6AQgCVQT/
+        A1gB+wE3AfsBNwH7AVgB+wJYBP8CVQJUAfoDVAH6AQgCVQP/AVcBVQFUAfoBVQJUAfoBVQNUAVUBVwL/
+        AVcBVQFUAfoBVQJUAfoBVQNUAVUBVwL/AZkBWAE3BPsBWAL7ATcB+wFYAZkC/wFXAVUBVAH6AVUCVAH6
+        AVUDVAFVAVcC/wVUAfoBVQJUAfoBVQFUAQgBVAL/BVQB+gFVAlQB+gFVAVQBCAFUAf8B9gH7AVgB+wE3
+        AfsBNwL7ATcC+wFYAfsBWAH2Af8FVAH6AVUCVAH6AVUBVAEIAVQB/wFWAZ0B+gFVAfoDVAH6A1QB+gFU
+        AZgBVwFWAZ0B+gFVAfoDVAH6A1QB+gFUAZgBVwGZAVgBNwL7AVgC+wFYAvsBNwL7AVgBmQFWAZ0B+gFV
+        AfoDVAH6A1QB+gFUAZgBVwFVAQgDVAFVAfoCVAFVAfoBVQJUAZgCVQEIA1QBVQH6AlQBVQH6AVUCVAGY
+        AVUCWAL7ATcC+wE3AfsBNwL7ATcB+wJYAVUBCANUAVUB+gJUAVUB+gFVAlQBmAFVAfoBCAFUAVUB+gJU
+        AVUB+gNUAfoBVAH6AVUB+gEIAVQBVQH6AlQBVQH6A1QB+gFUAfoBVQFYAvsBWAH7ATcB+wFYAvsBNwH7
+        AVgC+wFYAfoBCAFUAVUB+gJUAVUB+gNUAfoBVAH6AVUCVAH6A1QB+gJUAVUB+gJUAVUBCAFVAlQB+gNU
+        AfoCVAFVAfoCVAFVAQgBVQH7AVgD+wE3AvsBNwH7AVgD+wFYAfsCVAH6A1QB+gJUAVUB+gJUAVUBCAJV
+        AQgCVAH6AVUBVAFVAfoCVAFVAfoBVAEIAlUBCAJUAfoBVQFUAVUB+gJUAVUB+gFUAQgBVQJYAvsBNwL7
+        AVgC+wE3AfsBNwH7AlgBVQEIAlQB+gFVAVQBVQH6AlQBVQH6AVQBCAFVAVYBnQH6AVUCVAH6A1QB+gNU
+        AZ0CVgGdAfoBVQJUAfoDVAH6A1QBnQFWAZkBWAL7AVgB+wE3AfsBNwX7AVgBmQFWAZ0B+gFVAlQB+gNU
+        AfoDVAGdAVYB9gNUAfoDVAH6AVUDVAH6ATMC9gNUAfoDVAH6AVUDVAH6ATMC9gH7AVgD+wE3AvsBNwH7
+        AVgB+wFYAfsC9gNUAfoDVAH6AVUDVAH6ATMB9gH/AVcBVQJUAVUB+gFVAlQB+gFVAVQBVQGYAv8BVwFV
+        AlQBVQH6AVUCVAH6AVUBVAFVAZgC/wGZAVgF+wFYBPsBWAGZAv8BVwFVAlQBVQH6AVUCVAH6AVUBVAFV
+        AZgD/wFWAVUB+gNUAfoCVAH6AlUE/wFWAVUB+gNUAfoCVAH6AlUE/wNYB/sCWAT/AVYBVQH6A1QB+gJU
+        AfoCVQX/AVcBVAGdAQgB+gFUAZgBnQFUAVcG/wFXAVQBnQEIAfoBVAGYAZ0BVAFXBv8BmQH7AlgB+wNY
+        AfsBmQb/AVcBVAGdAQgB+gFUAZgBnQFUAVcH/wH2AVcBVQFUAlUBVgn/AfYBVwFVAVQCVQFWCf8B9gGZ
+        AlgB+wFYAZkB9gj/AfYBVwFVAVQCVQFWBf8BQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEB
+        FgAD//8AAgAL
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        wgAADsIBFShKgAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
@@ -131,7 +201,7 @@
   <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        wgAADsIBFShKgAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
