title ion added

--- a/iashell/iaforms/LogForm.resx
+++ b/iashell/iaforms/LogForm.resx
@@ -117,11 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageListEvent.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageListEvent.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD+
+        DQAAAk1TRnQBSQFMAgEBBgEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABP8BCAFXAVUCVAFV
+        AVcBCAj/AQgBVwFVAlQBVQFXAQgE/yAAAv8B9gGYAfoBlgIIAVQBmAGdAVUBmAX/AfYBmAH6AZYCCAFU
+        AZgBnQFVAZgD/yAAAv8CVQJUAfoDVAH6AQgCVQT/AlUCVAH6A1QB+gEIAlUC/yAAAf8BVwFVAVQB+gFV
+        AlQB+gFVA1QBVQFXAv8BVwFVAVQB+gFVAlQB+gFVA1QBVQFXAf8gAAH/BVQB+gFVAlQB+gFVAVQBCAFU
+        Av8FVAH6AVUCVAH6AVUBVAEIAVQB/yAAAVYBnQH6AVUB+gNUAfoDVAH6AVQBmAFXAVYBnQH6AVUB+gNU
+        AfoDVAH6AVQBmAFXIAABVQEIA1QBVQH6AlQBVQH6AVUCVAGYAlUBCANUAVUB+gJUAVUB+gFVAlQBmAFV
+        IAAB+gEIAVQBVQH6AlQBVQH6A1QB+gFUAfoBVQH6AQgBVAFVAfoCVAFVAfoDVAH6AVQB+gFVIAACVAH6
+        A1QB+gJUAVUB+gJUAVUBCAFVAlQB+gNUAfoCVAFVAfoCVAFVAQgBVSAAAVUBCAJUAfoBVQFUAVUB+gJU
+        AVUB+gFUAQgCVQEIAlQB+gFVAVQBVQH6AlQBVQH6AVQBCAFVIAABVgGdAfoBVQJUAfoDVAH6A1QBnQJW
+        AZ0B+gFVAlQB+gNUAfoDVAGdAVYgAAH2A1QB+gNUAfoBVQNUAfoBMwL2A1QB+gNUAfoBVQNUAfoBMwH2
+        IAAB/wFXAVUCVAFVAfoBVQJUAfoBVQFUAVUBmAL/AVcBVQJUAVUB+gFVAlQB+gFVAVQBVQGYAf8gAAL/
+        AVYBVQH6A1QB+gJUAfoCVQT/AVYBVQH6A1QB+gJUAfoCVQL/IAAD/wFXAVQBnQEIAfoBVAGYAZ0BVAFX
+        Bv8BVwFUAZ0BCAH6AVQBmAGdAVQBVwP/IAAE/wH2AVcBVQFUAlUBVgn/AfYBVwFVAVQCVQFWBf8wAAT/
+        AQgBVwFVAlQBVQFXAQgI/wEIAVcBVQJUAVUBVwEICP8B9gGZAVgB+wJYAZkB9gT/EAAC/wH2AZgB+gGW
+        AggBVAGYAZ0BVQGYBf8B9gGYAfoBlgIIAVQBmAGdAVUBmAb/AZkB+wNYAfsDWAGZA/8QAAL/AlUCVAH6
+        A1QB+gEIAlUE/wJVAlQB+gNUAfoBCAJVBP8DWAH7ATcB+wE3AfsBWAH7AlgC/wIADEYCAAH/AVcBVQFU
+        AfoBVQJUAfoBVQNUAVUBVwL/AVcBVQFUAfoBVQJUAfoBVQNUAVUBVwL/AZkBWAE3BPsBWAL7ATcB+wFY
+        AZkB/wIADEYCAAH/BVQB+gFVAlQB+gFVAVQBCAFUAv8FVAH6AVUCVAH6AVUBVAEIAVQB/wH2AfsBWAH7
+        ATcB+wE3AvsBNwL7AVgB+wFYAfYCAAxGAgABVgGdAfoBVQH6A1QB+gNUAfoBVAGYAVcBVgGdAfoBVQH6
+        A1QB+gNUAfoBVAGYAVcBmQFYATcC+wFYAvsBWAL7ATcC+wFYAZkCAAxGAgABVQEIA1QBVQH6AlQBVQH6
+        AVUCVAGYAlUBCANUAVUB+gJUAVUB+gFVAlQBmAFVAlgC+wE3AvsBNwH7ATcC+wE3AfsCWAIADEYCAAH6
+        AQgBVAFVAfoCVAFVAfoDVAH6AVQB+gFVAfoBCAFUAVUB+gJUAVUB+gNUAfoBVAH6AVUBWAL7AVgB+wE3
+        AfsBWAL7ATcB+wFYAvsBWAIADEYCAAJUAfoDVAH6AlQBVQH6AlQBVQEIAVUCVAH6A1QB+gJUAVUB+gJU
+        AVUBCAFVAfsBWAP7ATcC+wE3AfsBWAP7AVgB+wIADEYCAAFVAQgCVAH6AVUBVAFVAfoCVAFVAfoBVAEI
+        AlUBCAJUAfoBVQFUAVUB+gJUAVUB+gFUAQgBVQJYAvsBNwL7AVgC+wE3AfsBNwH7AlgCAAxGAgABVgGd
+        AfoBVQJUAfoDVAH6A1QBnQJWAZ0B+gFVAlQB+gNUAfoDVAGdAVYBmQFYAvsBWAH7ATcB+wE3BfsBWAGZ
+        AgAMRgIAAfYDVAH6A1QB+gFVA1QB+gEzAvYDVAH6A1QB+gFVA1QB+gEzAvYB+wFYA/sBNwL7ATcB+wFY
+        AfsBWAH7AfYCAAxGAgAB/wFXAVUCVAFVAfoBVQJUAfoBVQFUAVUBmAL/AVcBVQJUAVUB+gFVAlQB+gFV
+        AVQBVQGYAv8BmQFYBfsBWAT7AVgBmQH/EAAC/wFWAVUB+gNUAfoCVAH6AlUE/wFWAVUB+gNUAfoCVAH6
+        AlUE/wNYB/sCWAL/EAAD/wFXAVQBnQEIAfoBVAGYAZ0BVAFXBv8BVwFUAZ0BCAH6AVQBmAGdAVQBVwb/
+        AZkB+wJYAfsDWAH7AZkD/xAABP8B9gFXAVUBVAJVAVYJ/wH2AVcBVQFUAlUBVgn/AfYBmQJYAfsBWAGZ
+        AfYE/wFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP//wACAAs=
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        wQAADsEBuJFr7QAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
@@ -131,7 +201,7 @@
   <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        wQAADsEBuJFr7QAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
