--- a/iashell/iachkin/NoFileForm.resx
+++ b/iashell/iachkin/NoFileForm.resx
@@ -121,7 +121,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        vgAADr4B6kKxwAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
@@ -131,11 +131,116 @@
   <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
+        vgAADr4B6kKxwAAAAQlJREFUWEftkEsOAjEMQ+dO7JFYcHBOwzFAQTHyWG2adApseFJE87MzbH/+jLid
         Tw8Nb32PlcbXy72us+oAMy8fsNr88AHIURvlBtc4vB3TGlaRXq49+3ruDekNcx1vze1tIMffr/2Q1rDW
         opwN+Y3+kNaw1qJcv5p7Q3rDXNMZzvnXAsdYWD0ESwgvh4YG8l7NInXAEdgAhhZ8hLc/Aw6AGQ7gI16D
         nwDmAIYcOrOMnjC+nsNb64hE1TyanSYSVfNodoqRoJqP5ku0xDPh68fIirFxdidFVkjNs3shFRE1r+w2
         qQqoeXV/x4wAG8/sv5ldZuNZjZ2Il1LwnoaP5KgKtOZb4eO/ZNueTew65sAmdzAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAMDAAAAAACACoDgAAJgAAACAgAAAAAAgAqAgAAM4OAAAoAAAAMAAAAGAAAAABAAgAAAAAAAAJ
+        AAAAAAAAAAAAAAABAAAAAQAAAAAAAEJCQgBNTU0AWFhYAGNiYwBubm4AeXh4AISDgwCko6QAr66vALq5
+        ugDQz88A1NTUAObk5QDr6+sA8e/wAPb29gD4+PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+jY2ADBA0QAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAkJCQkJCQkJAAAAAAAAAAAAAAAACQkJCQkJCQkJCQkJCQkJCQkJAAA
+        AAAAAAAAAAAkJCQkJCQAAAAAAAAAAAAAAAAAAAAAAAAkJCQkJCQkJCQkJCQkAAAAAAAAAAAAAAAkJCQk
+        JAAAAAAAAAAAAAAAAAAAAAAAAAAAJCQkJCQkJCQkJCQAAAAAAAAAAAAAAAAkJCQkAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAJCQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAACQk
+        JCQkJCQkJAAAAAAAAAAAAAAAAAAAACQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAACQkJCQkJCQkJAAAAAAA
+        AAAAAAAAAAAAAAAkJCQAAAAAAAAAAAAAAAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAA
+        JCQAAAAAAAAAAAAAAAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAJCQkAAAAAAAAAAAA
+        AAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAACQkJAAAAAAAAAAAAAAAAAAAAAAAACQk
+        JCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAkJCQAAAAAAAAAAAAAAAAAAAAAACQkJCQkJCQkJAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAJCQkAAAAAAAAAAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAACQkJAAAAAAAAAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkJAAAAAAA
+        AAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkJCQkJCQkJCQkJCQkJCQkJCQk
+        JCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAACQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAkJCQAAAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJCQk
+        AAAAAAAAAAAAACQkJCQkJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACQkJAAAAAAAAAAAJSUl
+        JSUlJSQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACQkJAAAAAAAAAAlJSUkJCQkJSUlJAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkJCQAAAAAACUlJSQkJCQkJCUlJQAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAJCQkAAAAACUlJSQkJCQkJCUlJQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ACQkJAAAACUlJSQkJCQkJCUlJQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkJCQAAAAAJSUk
+        JSUlJSUlJQAAACUlJSUlJSUAAAAAJSUlAAAAAAAlJSUAAAAAAAAlJSUkAAAAACUlJSUlJSUlJAAAAAAl
+        JSUlAAAAAAAAJSUlAAAAAAAlJSUlAAAAACUlJSUlJQAAJSUlJSUlJSUkJAAAAAAAJSUlAAAAAAAAACUl
+        JQAAAAAAJSUlAAAAAAAlJSUkJQAAJSUlJSQkJCQkJAAAAAAAJSUlAAAAAAAAACUlJQAAAAAAJSUlAAAA
+        AAAlJSUkJCQAACUlJCQkJCQkJAAAAAAAJSUlAAAAAAAAACUlJQAAAAAAJSUlAAAAAAAlJSUAJCQkACQk
+        JSUlJSUlJAAAAAAAJSUlJQAAAAAAAAAlJSUAAAAAACUlJQAAAAAlJSUlACQkJCQlJSQkJCUlJSUAAAAA
+        ACUlJQAAAAAAAAAlJSUlAAAAACUlJSUAAAAAJSUlAAAkJCUlJSQkJCQlJSUAAAAAACUlJQAAAAAAAAAl
+        JSUlJQAAACUlJSUlAAAAJSUlAAAkJCUlJSQkJCQlJSUlAAAAACUlJQAAAAAAAAAAJSUAJSUAACUlJQAl
+        JQAAJSUlAAAAJCUlJSQkJCQkJSUlAAAAACUlJSUAAAAAAAAAJSUlACUlAAAlJSUAJSUAACUlJQAAACUl
+        JSUkJCQkJSUlAAAAAAAlJSUAAAAAAAAAJSUlAAAlJSUlJSUAACUlJSUlJQAAAAAlJSUkJCQkJSUlJQAA
+        AAAlJSUAAAAAAAAlJSUlAAAAJSUlJSUAAAAlJSUlJQAAAAAAJSUlJCQkJSUlJQAAAAAlJSUAAAAAAAAA
+        ACUlAAAAACUlJSUAAAAAJSUlAAAAAAAAACUlJSUlJQAAAAAAAAAAJSUlAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAACQkJCQkJAAAAAAAAAAAJSUlAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAkJCQkJAAAAAAAAAAAJSUlAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJCQkJAAAAAAA
+        AAAAJSUlJQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACQkJAAAAAAAAAAAJSUlJQAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkJAAAAAAAACUlJSUlJSUlAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///////wAA/8A//AAA
+        AAD/wP//wAEAAP/B///gAwAA/8P//+AHAAD/4f//8AcAAP/x///wBwAA//j///AHAAD//P//8AcAAP/8
+        f//wBwAA//4///AHAAD//x//8AcAAP//j//wBwAA///H//AHAAD//+f/8AcAAP//4AAABwAA///wAAAH
+        AAD///gAAAcAAP///H/wBwAA///+P/AHAAD///8f4AcAAP///x/ABwAA////j4AHAAD////HgAcAAP//
+        /+OABwAA////8eAHAAAB4+Pw8AcAAIfj4eBgBwAAx/Hx8GAHAADH8fHwMAcAAMfx8fEQBwAAw/j48IAD
+        AADj+Hh4wAMAAOP4ODjAAQAA4/yYmOABAADh/ExMcAEAAPH8YGB4AAAA8fhwcHwAAADx/nh4/gcAAPj/
+        ///+BwAA+P////8HAAD4/////4cAAPh/////xwAA+H/////nAADgH/////cAAP///////wAA////////
+        AAD///////8AACgAAAAgAAAAQAAAAAEACAAAAAAAAAQAAAAAAAAAAAAAAAEAAAABAAAAAAAAQkJCAFhY
+        WABjYmMAbm1uAHl4eACGhoYAkZGRAJqZmQCko6QAr66vALq5ugDFxMUA8e/wAPb29gD5+fkAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAzPsEA50FFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlJSUlJQAAAAAAAAAlJSUlJSUlJSUlAAAA
+        AAAAAAAAACUlJQAAAAAAAAAAAAAAJSUlJSUlJQAAAAAAAAAAAAAAACUlAAAAAAAAAAAAAAAAJSUlJSUA
+        AAAAAAAAAAAAAAAAACUlAAAAAAAAAAAAAAAlJSUlJQAAAAAAAAAAAAAAAAAAACUAAAAAAAAAAAAAACUl
+        JSUlAAAAAAAAAAAAAAAAAAAAACUAAAAAAAAAAAAAJSUlJSUAAAAAAAAAAAAAAAAAAAAAACUAAAAAAAAA
+        AAAlJSUlJQAAAAAAAAAAAAAAAAAAAAAAJSUAAAAAAAAAACUlJSUlAAAAAAAAAAAAAAAAAAAAAAAAJSUl
+        JSUlJSUlJSUlJSUAAAAAAAAAAAAAAAAAAAAAAAAAJQAAAAAAAAAlJSUlJQAAAAAAAAAAAAAAAAAAAAAA
+        AAAAJQAAAAAAACUlJSUlAAAAAAAAAAAAAAAAAAAAAAAAAAAlAAAAAAAAJSUlJSUAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAlAAAAAAAlJSUlJQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlAAAAJCQkJCQlAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAlACQkJSUlJCQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUAACQlJSQkJAAAAAAA
+        AAAAJCQkJAAAJCQAACQkAAAkJCQAACQkJCQlAAAAAAAAAAAAJCQAAAAAJAAAJCQAACQkACQAJCQlJSUA
+        AAAAAAAAAAAAJCQAAAAkJAAAJCQAACQkACUlJCQkJAAAAAAAAAAAAAAkJAAAACQkAAAkJAAAJCQAJSQk
+        JSQkJAAAAAAAAAAAACQkAAAAACQkACQkJAAkJAAAJCQlJSQkAAAAAAAAAAAAACQkAAAAJCQkACQkJAAk
+        JAAkJCQlJCQAAAAAAAAAAAAAJCQAACQkJAAkJCQAJCQkAAAkJCQkJCQAAAAAAAAAAAAkJAAAAAAAAAAA
+        AAAAAAAAAAAlJSUAAAAAAAAAAAAAAAAkJAAAAAAAAAAAAAAAAAAAAAAlJQAAAAAAAAAAAAAAACQkAAAA
+        AAAAAAAAAAAAAAAAAAAlAAAAAAAAAAAAAAAkJCQkJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        ////g/gB/4/+A//P/wf/5/8H//f/B//7/wf//f8H//z/B//+AAf//38H//+/B///vwf//98H///uB///
+        9Af///YH+GZjB/z2ZQf+czIH/nMyA/55EwP/OIkD/zERgf8//8f/n//n/5//9/8H////////////////
+        ////////
 </value>
   </data>
 </root>
