--- a/iashell/iaadmingui/UserSpaceUC.resx
+++ b/iashell/iaadmingui/UserSpaceUC.resx
@@ -138,4 +138,7 @@
         qQqoeXV/x4wAG8/sv5ldZuNZjZ2Il1LwnoaP5KgKtOZb4eO/ZNueTew65sAmdzAAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="folderBrowser.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
